--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -8,7 +8,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.effone.hostismeandroid.activity.MenuActivity"
     tools:showIn="@layout/activity_menu"
-    android:padding="5dp">
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp">
 
 
     <TextView
@@ -46,6 +47,7 @@
             android:textColor="@android:color/white"
             android:drawableLeft="@drawable/cart"
             android:drawablePadding="5dp"
+            android:padding="5dp"
             android:drawableTint="@android:color/white"
             android:textSize="12dp" />
 
